Fixed i style on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -357,7 +357,7 @@ input[type=number] {
     margin: 5rem auto;
   }
 
-  i {
+  table i {
     margin: 0;
   }
 }
